Nav-Collapse row changing bug fixed

--- a/assets/css/indexStyle.css
+++ b/assets/css/indexStyle.css
@@ -180,7 +180,7 @@ p {
         margin-right: 100px!important;
     }
     .navbar-brand {
-        width: 500px;
+        width: 490px;
     }
 }
 
@@ -204,7 +204,7 @@ p {
     }
 
     .navbar-brand {
-        width: 410px;
+        width: 400px;
     }
     
 }
@@ -234,7 +234,7 @@ p {
     }
 
     .navbar-brand {
-        width: 500px;
+        width: 490px;
     }
 
 }
